# autoware_vpi

./: Dockerfile  README.md  config.ini  docker-compose.yml  start_all.sh
modules/v2x-converter/: CMakeLists.txt  package.xml
modules/v2x-converter/include/v2x_converter/: v2x_converter.hpp
modules/v2x-converter/src/: main.cpp  test_publish_bus_in_mqtt.py  v2x_converter.cpp
